--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 	<h2> Roll No: 323103383016 </h2>
 
 	<img width=50% src="Yuji.jpeg">
-	<img src="gojoSatoru.jpeg"
+	<img src="gojoSatoru.jpeg">
 	</body>
 </html>
